--- a/stylesheets/scss/style.scss
+++ b/stylesheets/scss/style.scss
@@ -102,7 +102,8 @@ nav.navbar.navbar-inverse {
 #what {
 	padding-top: 22vh;
 
-	.row {
+	.line {
+		width: 100vw;
 		padding: 10px 0;
 
 		a {
@@ -122,7 +123,8 @@ nav.navbar.navbar-inverse {
 #team {
 	padding-top: 15vh;
 
-	.row {
+	.line {
+		width: 100vw;
 		padding: 5px 0;
 
 		.person {
@@ -130,7 +132,7 @@ nav.navbar.navbar-inverse {
 
 			img.square {
 				height: 150px;
-				padding: 0 5px;
+				margin: 0 5px;
 			}
 
 			.overlay{
